# mem4_game

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
doc/: aliases.js  settings.html
doc/mem4/: all.html  index.html  sidebar-items.js
doc/mem4/cardmoniker/: index.html
doc/mem4/gamedata/: constant._IMPL_DESERIALIZE_FOR_Card.html  constant._IMPL_DESERIALIZE_FOR_CardStatusCardFace.html  constant._IMPL_DESERIALIZE_FOR_Size2d.html  constant._IMPL_SERIALIZE_FOR_Card.html  constant._IMPL_SERIALIZE_FOR_CardStatusCardFace.html  constant._IMPL_SERIALIZE_FOR_GameConfig.html  index.html  struct.GameConfig.html
doc/mem4/gridcontainer/: fn.div_grid_item_click.html  fn.max_grid_size.html  sidebar-items.js
doc/mem4/playeractions/: fn.div_accepted.html  fn.div_asked.html  fn.div_click_one.html  fn.div_play_again.html  fn.div_reconnect.html  fn.div_wait.html  index.html
doc/mem4/playersandscores/: index.html  struct.PlayersAndScores.html
doc/mem4/rootrenderingcomponent/: sidebar-items.js  struct.RootRenderingComponent.html
doc/mem4/rulesanddescription/: constant.GAME_DESCRIPTION.html  index.html  struct.RulesAndDescription.html
doc/mem4/websocketcommunication/: fn.setup_ws_msg_recv.html  fn.setup_ws_onerror.html
doc/mem4_common/: enum.GameState.html  index.html  sidebar-items.js
doc/mem4_server/: all.html  fn.enable_ansi_support.html  fn.local_ip_get.html  index.html
doc/src/mem4/: gamedata.rs.html  lib.rs.html  playeractions.rs.html  playersandscores.rs.html  websocketcommunication.rs.html
docs/: index.html  search-index.js  settings.html  source-files.js  storage.js
docs/mem4/: all.html  fn.run.html  fn.session_storage.html  fn.text_with_br_newline.html  index.html  sidebar-items.js  struct.RootRenderingComponent.html
docs/mem4/cardmoniker/: constant.GAME_TITLE.html  fn.div_grid_card_moniker.html
docs/mem4/divcardmoniker/: constant.GAME_TITLE.html  fn.div_grid_card_moniker.html  index.html
docs/mem4/divfordebugging/: fn.button_for_fullscreen.html  fn.div_for_debugging.html  fn.do_fullscreen.html  fn.is_iphone.html  fn.javascriptdofullscreen.html  index.html  sidebar-items.js
docs/mem4/divgridcontainer/: constant.SRC_FOR_CARD_FACE_DOWN.html  fn.div_grid_container.html  fn.div_grid_item.html  fn.div_grid_item_on_click.html  fn.div_grid_items.html  fn.grid_height.html  index.html  (+2 more)
docs/mem4_common/: all.html  constant._IMPL_DESERIALIZE_FOR_GameStatus.html  constant._IMPL_DESERIALIZE_FOR_Player.html  constant._IMPL_DESERIALIZE_FOR_WsMessage.html  constant._IMPL_SERIALIZE_FOR_GameStatus.html  constant._IMPL_SERIALIZE_FOR_Player.html  constant._IMPL_SERIALIZE_FOR_WsMessage.html  enum.GameState.html  enum.GameStatus.html  enum.WsMessage.html  index.html  sidebar-items.js  struct.Player.html
docs/mem4_server/: all.html  fn.broadcast.html  fn.enable_ansi_support.html  fn.local_ip_get.html  fn.main.html  fn.receive_message.html  fn.send_to_other_players.html  fn.user_connected.html  fn.user_disconnected.html  index.html  sidebar-items.js  type.Users.html
mem4/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json  rustfmt.toml
mem4/js/: javascriptdofullscreen.js  mem4utils.js
mem4/src/: cardmoniker.rs  divcardmoniker.rs  divfordebugging.rs  divgridcontainer.rs  divplayeractions.rs  divplayersandscores.rs  divrulesanddescription.rs  fetchgameconfig.rs  fetchmod.rs  gamedata.rs  gridcontainer.rs  javascriptimportmod.rs  lib.rs  logmod.rs  playeractions.rs  playersandscores.rs  rootrenderingcomponent.rs  rulesanddescription.rs  statusinviteaskbegin.rs  statusinviteasked.rs  statusinviteasking.rs  statusplayagain.rs  statusplaybefore1card.rs  statusplaybefore1stcard.rs  statusplaybefore2card.rs  statusplaybefore2ndcard.rs  statustaketurnbegin.rs  statuswanttoplayaskbegin.rs  statuswanttoplayasked.rs  statuswanttoplayasking.rs  websocketcommunication.rs  websocketreconnect.rs
mem4_common/: Cargo.toml  Makefile.toml  README.md
mem4_common/src/: lib.rs
mem4_server/: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
mem4_server/src/: main.rs
temp/: mem4Flow.odt
webfolder/mem4/: index.html
(+207 files in other folders)
