[package]
name = "mem4_common"
version = "1.1.1" 
description = "commons for mem4 wasm and server"
authors = ["Luciano Bestia"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem4_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"