[package]
name = "mem4_server"
version = "1.1.3"
description = "server for the game mem4 http + WebSocket on the same port"
authors = ["Luciano Bestia"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem4_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
mem4_common = { path = "../mem4_common" }
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
warp="0.1.15"
regex="1.1.6"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.11.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
unwrap = "1.2.1"
